--- a/Traveling.html
+++ b/Traveling.html
@@ -11,7 +11,7 @@
   <div class="background2"></div>
   <div class="Logo">Marjanovik</div>
   <nav class="navigation">
-    <a href="Home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="About Me.html">About Me</a>
     <a href="Education.html">Education</a>
     <a href="Traveling.html">Travelling</a>
