change element sizes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <a href="Fasshion.html">Fashion</a>
     </nav>
     <div class="footer"></div>
-    <div class="text">WELCOME !</div>
-    <div class="under-text">This is my fisrt web page . . . </div>
-    <img class="home-image" src="imgs/home.png" width="2000px" height="2000px">
+    <div class="text5 text6">WELCOME !</div>
+    <div class="text3">This is my fisrt web page . . . </div>
+    <img class="home-image" src="imgs/home.png" width="500" height="500px">
 </div>
 </body>
 </html>
